chore: update django custom auth token

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ SQL_USER=neondb_owner
 SQL_PASSWORD=npg_yXBt1jbqF0Cu
 SQL_HOST=ep-restless-frog-adpdus22-pooler.c-2.us-east-1.aws.neon.tech
 # DB_URL=postgresql://neondb_owner:npg_yXBt1jbqF0Cu@ep-restless-frog-adpdus22-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+EMAIL_HOST_USER=belloabdulhakeemolamide@gmail.com
+EMAIL_HOST_PASSWORD=fcfzwmlamoxvoojv
+DEFAULT_FROM_EMAIL=belloabdulhakeemolamide@gmail.com
