--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.10,<4.0"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "drf-spectacular (>=0.28.0,<0.29.0)",
+    "pillow (>=11.3.0,<12.0.0)",
+    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
 ]
 
 
